kouhai/tests/cases/error/import_nonexistent_module.kou
import "nonexistent.kou"

fn main():
    print(1)
